[package]
name = "galactic-scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-files = "0.6.2"
actix-cors = "0.6.4"
actix-service = "2.0.2"
mime = "0.3.16"
mime_guess = "2.0.4"
env_logger = "0.10.0"
log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
planet_generator = { path = "../planet-generator" }
chrono = "0.4.24"
fern = "0.6.2"
colored = { version = "2.0.0", features = ["no-color"] }
